helm_webapi_deployment/ca-with-ingresslbl/ca-with-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ca-with-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /v1/?(.*)
        pathType: Prefix
        backend:
          service:
            name: ca-with-ingresslbl-chart
            port:
              number: 80
